# fastapi-storage

./: .env.example  .gitignore  generate_keys.py  pyproject.toml
migrations/: env.py
migrations/versions/: 85d8ec36043b_.py  975cd31bf0d5_.py  ad42ca5b03a4_.py  b618f4ad0d77_.py  d7d848d801e0_.py  fd65a4a6a30c_.py
src/: celery_app.py  config.py  database.py  main.py  middlewares.py
src/auth/: jwt_service.py  models.py  router.py  schemas.py  service.py  utils.py
src/users/: models.py  router.py  schemas.py  service.py
src/videos/: hls.py  models.py  router.py  schemas.py  service.py  tasks.py
