[project]
name = "fastapi-storage"
version = "0.1.0"
description = "Backend API for storage S3"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "fastapi-csrf-protect==1.0.7",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "passlib==1.7.4",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "PyJWT==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "SQLAlchemy==2.0.48",
    "starlette==0.52.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.42.0"
]