[project]
name = "fastapi-storage"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "fastapi-csrf-protect (>=1.0.7,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
